# generic_factory

./: CMakeLists.txt  README.md  generic_factory.hpp  recursive_factory.hpp  test_recursive.cpp  test_sub_base.hpp  test_sub_derived_1.cpp  test_sub_derived_1.h  test_sub_derived_2.cpp  test_sub_derived_2.h
